# OnlineCourse

./: .gitignore  README.md  install.bat  install.sh
database/: README.txt  login.bat  my.ini
server/: CMakeLists.txt  init_database.bat  main.cpp  main.py  start_server.bat
server/conf/: db_conf.py
server/controller/: api.py  config.py
server/db/: DBMgr.py
server/db/mysql/: MySQLHelper.py
server/db/mysql/schema/: main.py
server/templates/: index.html  login.html  reg.html
server/unit_test/: main.py  run.bat  test.py
server/utils/: Singleton.py  log.py
